--- a/Client/Client/Base.lproj/Main.storyboard
+++ b/Client/Client/Base.lproj/Main.storyboard
@@ -1,24 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Client" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="WLX-FH-OKR">
+                                <rect key="frame" x="0.0" y="809" width="414" height="4"/>
+                            </progressView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6oh-4U-kJQ">
+                                <rect key="frame" x="0.0" y="44" width="414" height="765"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rad-N9-F2a">
+                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="lJB-sp-Ebt"/>
+                                    <barButtonItem systemItem="action" id="FqR-lZ-lxO">
+                                        <connections>
+                                            <action selector="share:" destination="BYZ-38-t0r" id="H3l-vD-VLE"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="QCQ-mw-U4G"/>
+                                    <barButtonItem systemItem="play" id="iFu-dc-mXe">
+                                        <connections>
+                                            <action selector="start:" destination="BYZ-38-t0r" id="iIB-wk-vqq"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="AAo-nT-FJm"/>
+                                </items>
+                            </toolbar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rad-N9-F2a" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="1ok-JV-dX1"/>
+                            <constraint firstItem="6oh-4U-kJQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Aju-n8-8NG"/>
+                            <constraint firstItem="rad-N9-F2a" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="NUV-05-wv0"/>
+                            <constraint firstItem="rad-N9-F2a" firstAttribute="top" secondItem="WLX-FH-OKR" secondAttribute="bottom" id="QJl-sz-HWe"/>
+                            <constraint firstItem="WLX-FH-OKR" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="QpS-S6-pSa"/>
+                            <constraint firstItem="WLX-FH-OKR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="W2t-N8-o1A"/>
+                            <constraint firstItem="rad-N9-F2a" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="iB7-BA-Nrb"/>
+                            <constraint firstItem="WLX-FH-OKR" firstAttribute="top" secondItem="6oh-4U-kJQ" secondAttribute="bottom" id="lEC-nA-Caj"/>
+                            <constraint firstItem="6oh-4U-kJQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="u8Z-Iw-SMk"/>
+                            <constraint firstItem="6oh-4U-kJQ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="yJ3-ZC-GYx"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="out" destination="6oh-4U-kJQ" id="i6z-gm-fif"/>
+                        <outlet property="progressView" destination="WLX-FH-OKR" id="BWe-CX-FXO"/>
+                        <outlet property="shareButton" destination="FqR-lZ-lxO" id="DrA-pV-kZX"/>
+                        <outlet property="startButton" destination="iFu-dc-mXe" id="wNO-rD-GmE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-39.130434782608695" y="93.75"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
