--- a/Client/Client/Base.lproj/Main.storyboard
+++ b/Client/Client/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jNm-Ll-q6V">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Edge Tester-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Client" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,58 +17,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="WLX-FH-OKR">
-                                <rect key="frame" x="0.0" y="809" width="414" height="4"/>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WLX-FH-OKR">
+                                <rect key="frame" x="40" y="446" width="334" height="4"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             </progressView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6oh-4U-kJQ">
-                                <rect key="frame" x="0.0" y="44" width="414" height="765"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rad-N9-F2a">
-                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
-                                <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="SeY-gY-5K8"/>
-                                    <barButtonItem title="Item" image="gear" catalog="system" id="edY-bN-9dJ">
-                                        <connections>
-                                            <action selector="openSettings:" destination="BYZ-38-t0r" id="iuk-sM-zfK"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="lJB-sp-Ebt"/>
-                                    <barButtonItem image="doc.on.clipboard" catalog="system" id="FqR-lZ-lxO">
-                                        <connections>
-                                            <action selector="copyToClipboard:" destination="BYZ-38-t0r" id="H3l-vD-VLE"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="QCQ-mw-U4G"/>
-                                    <barButtonItem systemItem="play" id="iFu-dc-mXe">
-                                        <connections>
-                                            <action selector="start:" destination="BYZ-38-t0r" id="iIB-wk-vqq"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="AAo-nT-FJm"/>
-                                </items>
-                            </toolbar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="rad-N9-F2a" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="1ok-JV-dX1"/>
-                            <constraint firstItem="6oh-4U-kJQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Aju-n8-8NG"/>
-                            <constraint firstItem="rad-N9-F2a" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="NUV-05-wv0"/>
-                            <constraint firstItem="rad-N9-F2a" firstAttribute="top" secondItem="WLX-FH-OKR" secondAttribute="bottom" id="QJl-sz-HWe"/>
-                            <constraint firstItem="WLX-FH-OKR" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="QpS-S6-pSa"/>
-                            <constraint firstItem="WLX-FH-OKR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="W2t-N8-o1A"/>
-                            <constraint firstItem="rad-N9-F2a" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="iB7-BA-Nrb"/>
-                            <constraint firstItem="WLX-FH-OKR" firstAttribute="top" secondItem="6oh-4U-kJQ" secondAttribute="bottom" id="lEC-nA-Caj"/>
-                            <constraint firstItem="6oh-4U-kJQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="u8Z-Iw-SMk"/>
-                            <constraint firstItem="6oh-4U-kJQ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="yJ3-ZC-GYx"/>
-                        </constraints>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="SeY-gY-5K8"/>
+                        <barButtonItem title="Item" image="gear" catalog="system" id="edY-bN-9dJ">
+                            <connections>
+                                <action selector="openSettings:" destination="BYZ-38-t0r" id="iuk-sM-zfK"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="QCQ-mw-U4G"/>
+                        <barButtonItem systemItem="play" id="iFu-dc-mXe">
+                            <connections>
+                                <action selector="start:" destination="BYZ-38-t0r" id="iIB-wk-vqq"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="AAo-nT-FJm"/>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" title="Edge Tester" id="AmE-HK-ehX"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="out" destination="6oh-4U-kJQ" id="i6z-gm-fif"/>
                         <outlet property="progressView" destination="WLX-FH-OKR" id="BWe-CX-FXO"/>
                         <outlet property="settingsButton" destination="edY-bN-9dJ" id="gTH-dn-Bcn"/>
                         <outlet property="startButton" destination="iFu-dc-mXe" id="wNO-rD-GmE"/>
@@ -75,15 +50,31 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-39.130434782608695" y="93.75"/>
+            <point key="canvasLocation" x="-155.07246376811597" y="-579.24107142857144"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="fSm-qq-DFm">
+            <objects>
+                <navigationController toolbarHidden="NO" id="jNm-Ll-q6V" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GOW-yG-5sl">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4k1-ZJ-FAc">
+                        <rect key="frame" x="0.0" y="813" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="67F-JH-5DD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xph-oH-NIP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-945" y="-579"/>
         </scene>
     </scenes>
     <resources>
-        <image name="doc.on.clipboard" catalog="system" width="116" height="128"/>
         <image name="gear" catalog="system" width="128" height="119"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
